# dual_arm_teleoperation

./: .gitmodules  README.md
dual_arm_teleop/: package.xml  setup.cfg  setup.py
dual_arm_teleop/config/: left_servo.yaml  right_servo.yaml  teleop_params.yaml
dual_arm_teleop/dual_arm_teleop/: hand_tracker.py  teleop_node.py
dual_arm_teleop/launch/: teleop.launch.py
moveit_resources/dual_arm_panda_moveit_config/: CHANGELOG.rst  package.xml
moveit_resources/dual_arm_panda_moveit_config/config/: moveit_controllers.yaml  ompl_planning.yaml  panda.srdf  panda.urdf.xacro  panda_hand.ros2_control.xacro  ros2_controllers.yaml
moveit_resources/dual_arm_panda_moveit_config/launch/: demo.launch.py  moveit.rviz
moveit_resources/moveit_resources/: CHANGELOG.rst  package.xml
moveit_resources/panda_description/: package.xml
moveit_resources/panda_moveit_config/: package.xml
moveit_resources/panda_moveit_config/config/: chomp_planning.yaml
